Bug 1319825 - Update the overflow areas of all descendants when we toggle opacity on a preserve-3d frame. r=tnikkel